...
                        <constraints>
                            <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="237" id="04c-mN-cHX"/>
                            <constraint firstItem="0XM-y9-sOw" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="7mf-7p-Hes"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="详细" id="mOI-FS-AaM"/>
                    <connections>
                        <outlet property="detailDescriptionLabel" destination="0XM-y9-sOw" id="deQ-Na-JPF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
            </objects>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="备忘录" id="Zdf-7t-Un8">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="RMh-h2-eGn">
                            <connections>
                                <segue destination="YdR-PI-d5e" kind="presentation" modalPresentationStyle="formSheet" id="ziL-zV-f8L"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a3t-Pq-FWv">
                                <rect key="frame" x="8" y="72" width="359" height="326"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="Text View"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <connections>
                                    <outlet property="delegate" destination="o02-Fy-FYP" id="KXZ-0p-sjn"/>
                                </connections>
                            </textView>
...
                                <include reference="t5x-QZ-3e2"/>
                                <include reference="vHt-lq-u39"/>
                                <include reference="gaj-MS-hUW"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="增加" id="rMz-x1-Smw">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vFM-7v-Ium">
                            <connections>
                                <action selector="onclickCancel:" destination="o02-Fy-FYP" id="oFd-f2-CHk"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="ICY-27-Hev">
...
