...
        
        //添加一些测试数据
        NSDateFormatter *dateFormatter = [[NSDateFormatter alloc] init];
        [dateFormatter setDateFormat:@"yyyy-MM-dd HH:mm:ss"];
        
        NSDate *date1 = [dateFormatter dateFromString:@"2016-01-01 16:01:03"];
        Note* note1 = [[Note alloc] initWithDate:date1 content:@"Welcome to MyNote."];
        
        NSDate *date2 = [dateFormatter dateFromString:@"2016-01-02 8:01:03"];
        Note* note2 = [[Note alloc] initWithDate:date2 content:@"欢迎使用MyNote。"];
        
        sharedSingleton.listData = [[NSMutableArray alloc] init];
        [sharedSingleton.listData addObject:note1];
        [sharedSingleton.listData addObject:note2];
        
    });
...
