...
        
        //获得设备令牌
        let deviceTokenString = deviceToken.reduce("", {$0 + String(format: "%02X", $1)})
        print(deviceTokenString)
        
        //通知接收后的处理
        let deleteAction = UNNotificationAction(identifier: "delete_action_id", title: "Delete", options: [])
        
        let replyAction = UNNotificationAction(identifier: "reply_action_id", title: "Reply", options: [])
        
        let deleteReplyCategory = UNNotificationCategory(identifier: "custom_category_id",
                                                       actions: [deleteAction, replyAction], intentIdentifiers: [], options: [])

...
